# aqueduct

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .mcp.example.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/aqueduct/: SKILL.md
.claude/skills/aqueduct-dev/: SKILL.md
.claude/skills/aqueduct-review/: SKILL.md
.claude/skills/aqueduct/references/: architecture.md
.claude/skills/change-management/: SKILL.md
.claude/skills/change-management/references/: workflow.md
.claude/skills/data-developer/: SKILL.md
.claude/skills/data-developer/assets/: sql_template.sql
.claude/skills/data-developer/references/: workflow.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
examples/: ecommerce_daily_stat.md  saas_weekly_retention.md  supply_chain_inventory.md
knowledge/: semantic-model.md
knowledge/domains/: ecommerce_order.json  saas_user_activity.json  supply_chain_inventory.json
src/aqueduct/: __init__.py  __main__.py  core.py  exceptions.py
src/aqueduct/cli/: __init__.py  main.py
src/aqueduct/config/: __init__.py  settings.py
src/aqueduct/engine/: __init__.py  recovery.py  state.py  workflow.py
src/aqueduct/engine/nodes/: __init__.py  change.py  ddl.py  design.py  dqc.py  helpers.py  report.py  requirement.py  review.py  sql.py
src/aqueduct/llm/: __init__.py  base.py  claude.py  context.py  prompts.py  router.py
src/aqueduct/mcp/: __init__.py  client.py  config.py
src/aqueduct/mcp/adapters/: dp_client.py
src/aqueduct/mcp/tools/: __init__.py  execute_sql.py  get_table_schema.py  list_tables.py
src/aqueduct/memory/: __init__.py  domain.py  recall.py  store.py
src/aqueduct/skills/: __init__.py  base.py  code_review.py  ddl_generate.py  design_scheme.py  dqc_quality.py  registry.py  report_delivery.py  requirement_clarify.py  sql_develop.py
src/aqueduct/tools/: __init__.py  base.py  batch_query.py  design.py  dqc.py  estimator.py  executor.py  lineage.py  productivity.py  registry.py  semantic.py  sync.py  validator.py
src/aqueduct/utils/: __init__.py  logging_config.py  regex.py  task_logger.py
templates/: ddl.sql  design.md  dqc.sql  report.md  requirement.md
tests/: conftest.py  test_cli.py  test_context_alignment.py  test_core.py  test_exceptions.py  test_executor.py  test_lineage.py  test_memory.py  test_recovery.py  test_settings.py  test_skills.py  test_validator.py  test_workflow.py
tests/fixtures/: dqc_ecommerce_order.sql
tests/integration/: test_layers.py
(+11 files in other folders)
