[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aqueduct"
version = "0.4.0"
description = "Data Engineering Automation Agent — layered, extensible, pip-installable"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "JohnnyQ"},
]
keywords = ["data-warehouse", "etl", "sql", "data-quality", "lineage", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.39",
    "httpx>=0.27",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[project.scripts]
aqueduct = "aqueduct.cli.main:main"

[project.urls]
Homepage = "https://github.com/JohnnyQ-commits/aqueduct"
Repository = "https://github.com/JohnnyQ-commits/aqueduct"
Issues = "https://github.com/JohnnyQ-commits/aqueduct/issues"
Changelog = "https://github.com/JohnnyQ-commits/aqueduct/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aqueduct*"]

[tool.setuptools.package-data]
"aqueduct" = ["skills/prompt/*.tpl.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test"
python_functions = "test_*"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B006",   # mutable default argument (common pattern)
    "RUF001", # ambiguous unicode in string (project uses Chinese)
    "RUF002", # ambiguous unicode in docstring (project uses Chinese)
    "RUF003", # ambiguous unicode in comment (project uses Chinese)
    "RUF005", # list concatenation (style preference)
    "RUF012", # mutable class attribute (existing pattern)
    "SIM115", # context manager for files (not needed for temp files)
    "W291",   # trailing whitespace
]

[tool.ruff.lint.isort]
known-first-party = ["aqueduct"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
